tests/rosetta/out/Dart/chaocipher.error
run error: exit status 254
../../tests/rosetta/out/Dart/chaocipher.dart:58:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/chaocipher.dart:50:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/chaocipher.dart:5:35: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    if (s.substring(i, (i as num) + 1) == ch) {
                                  ^
../../tests/rosetta/out/Dart/chaocipher.dart:8:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/chaocipher.dart:31:43: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    var ch = text.substring(i, (i as num) + 1);
                                          ^
../../tests/rosetta/out/Dart/chaocipher.dart:35:82: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      out = (out as num) + (((left is String) ? left.substring(idx, (idx as num) + 1) : (left as List).sublist(idx, (idx as num) + 1)) as num);
                                                                                 ^
../../tests/rosetta/out/Dart/chaocipher.dart:35:130: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      out = (out as num) + (((left is String) ? left.substring(idx, (idx as num) + 1) : (left as List).sublist(idx, (idx as num) + 1)) as num);
                                                                                                                                 ^
../../tests/rosetta/out/Dart/chaocipher.dart:35:26: Error: A value of type 'num' can't be assigned to a variable of type 'String'.
      out = (out as num) + (((left is String) ? left.substring(idx, (idx as num) + 1) : (left as List).sublist(idx, (idx as num) + 1)) as num);
                         ^
../../tests/rosetta/out/Dart/chaocipher.dart:39:84: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      out = (out as num) + (((right is String) ? right.substring(idx, (idx as num) + 1) : (right as List).sublist(idx, (idx as num) + 1)) as num);
                                                                                   ^
../../tests/rosetta/out/Dart/chaocipher.dart:39:133: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      out = (out as num) + (((right is String) ? right.substring(idx, (idx as num) + 1) : (right as List).sublist(idx, (idx as num) + 1)) as num);
                                                                                                                                    ^
../../tests/rosetta/out/Dart/chaocipher.dart:39:26: Error: A value of type 'num' can't be assigned to a variable of type 'String'.
      out = (out as num) + (((right is String) ? right.substring(idx, (idx as num) + 1) : (right as List).sublist(idx, (idx as num) + 1)) as num);
                         ^
../../tests/rosetta/out/Dart/chaocipher.dart:45:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/chaocipher.dart:59:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/chaocipher.dart:83:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/chaocipher.dart:112:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/chaocipher.dart:117:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/chaocipher.dart:121:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
